--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
 <head>
     
-    <!-- metadata and title -->
+    <!-- title and metadata -->
+    <title>2018 Wildfires in BC</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="2018 Wildfire Perimeters in British Columbia Canada">
     <meta name="keywords" content="British Columbia,Wildfire,Fires">
     <meta name="author" content="Rob Oostlander" />
-    <title>"2018 Wildfire Perimeters in British Columbia Canada"</title>
-
+    
 </head>
 
 <body>
